Add EXTRA_IMAGE_FEATURES = debug-tweaks

--- a/.config.yaml
+++ b/.config.yaml
@@ -37,3 +37,7 @@ repos:
     branch: master
     layers:
       .:
+
+local_conf_header:
+  sublime-platform: |
+    EXTRA_IMAGE_FEATURES += " debug-tweaks "
